Implemented an asynchronous HTTP API server
This server utilizes the Beast library for parsing and constructing
HTTP/1.1 messages and a pure-Lua JSON library provides JSON support.

Signed-off-by: Damian Jarek <damian.jarek93@gmail.com>

--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -35,7 +35,7 @@ jobs:
             cc: gcc
             triplet: x64-linux
             packages: >
-              boost-asio boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
+              boost-asio boost-beast boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
               lua libmariadb pugixml cryptopp fmt
           - name: ubuntu-clang
             os: ubuntu
@@ -43,7 +43,7 @@ jobs:
             cc: clang
             triplet: x64-linux
             packages: >
-              boost-asio boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
+              boost-asio boost-beast boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
               lua libmariadb pugixml cryptopp fmt
           - name: macos-clang
             os: macos
@@ -51,7 +51,7 @@ jobs:
             cc: clang
             triplet: x64-osx
             packages: >
-              boost-asio boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
+              boost-asio boost-beast boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
               lua libmariadb pugixml cryptopp fmt
         exclude:
           - name: ubuntu-clang
@@ -141,7 +141,7 @@ jobs:
             cc: cl.exe
             triplet: x64-windows
             packages: >
-              boost-asio boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
+              boost-asio boost-beast boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
               lua luajit libmariadb pugixml cryptopp fmt
 
     steps:
