--- a/vc17/theforgottenserver.vcxproj
+++ b/vc17/theforgottenserver.vcxproj
@@ -185,6 +185,13 @@
     <ClCompile Include="..\src\guild.cpp" />
     <ClCompile Include="..\src\house.cpp" />
     <ClCompile Include="..\src\housetile.cpp" />
+    <ClCompile Include="..\src\http_api\peer.cpp" />
+    <ClCompile Include="..\src\http_api\responder.cpp" />
+    <ClCompile Include="..\src\http_api\router.cpp" />
+    <ClCompile Include="..\src\http_api\generic_stream_acceptor.cpp" />
+    <ClCompile Include="..\src\http_api\server.cpp">
+      <ObjectFileName>$(IntDir)\obj_d\api_server</ObjectFileName>
+    </ClCompile>
     <ClCompile Include="..\src\inbox.cpp" />
     <ClCompile Include="..\src\iologindata.cpp" />
     <ClCompile Include="..\src\iomap.cpp" />
@@ -274,6 +281,12 @@
     <ClInclude Include="..\src\guild.h" />
     <ClInclude Include="..\src\house.h" />
     <ClInclude Include="..\src\housetile.h" />
+    <ClInclude Include="..\src\http_api\common.h" />
+    <ClInclude Include="..\src\http_api\peer.h" />
+    <ClInclude Include="..\src\http_api\responder.h" />
+    <ClInclude Include="..\src\http_api\router.h" />
+    <ClInclude Include="..\src\http_api\generic_stream_acceptor.h" />
+    <ClInclude Include="..\src\http_api\server.h" />
     <ClInclude Include="..\src\inbox.h" />
     <ClInclude Include="..\src\iologindata.h" />
     <ClInclude Include="..\src\iomap.h" />
