--- a/.github/workflows/release-vcpkg.yml
+++ b/.github/workflows/release-vcpkg.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         name: [ubuntu-gcc, macos-clang]
         buildtype: [Release]
-        luajit: [on]
+        luajit: [enabled]
         include:
           - name: ubuntu-gcc
             os: ubuntu
@@ -24,7 +24,7 @@ jobs:
             triplet: x64-linux
             packages: >
               boost-asio boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
-              lua libmariadb pugixml cryptopp fmt
+              lua libmariadb cryptopp meson ninja
           - name: macos-clang
             os: macos
             cxx: clang++
@@ -32,26 +32,22 @@ jobs:
             triplet: x64-osx
             packages: >
               boost-asio boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
-              lua libmariadb pugixml cryptopp fmt
+              lua libmariadb cryptopp meson ninja
 
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Get latest CMake
-        # Using 'latest' branch, the latest CMake is installed.
-        uses: lukka/get-cmake@latest
-
       - name: Ubuntu - install luajit, remove libmysqlclient-dev
         run: |
           sudo apt-get install libluajit-5.1-dev
           sudo apt-get remove -y libmysqlclient-dev
-        if: contains( matrix.os, 'ubuntu')
+        if: contains(matrix.os, 'ubuntu')
 
       - name: MacOS - install luajit pkgconfig
         run: brew install luajit pkgconfig
-        if: contains( matrix.os, 'macos')
+        if: contains(matrix.os, 'macos')
 
       - name: Set Environment vars
         run: |
@@ -67,13 +63,8 @@ jobs:
           appendedCacheKey: ${{ matrix.name }}${{ matrix.buildtype }}${{ matrix.luajit }}
           vcpkgGitCommitId: 5568f110b509a9fd90711978a7cb76bae75bb092
 
-      - name: Build with CMake
-        uses: lukka/run-cmake@v3
-        with:
-          useVcpkgToolchainFile: true
-          buildDirectory: ${{ runner.workspace }}/build
-          cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
-          cmakeAppendedArgs: '-G Ninja -DCMAKE_BUILD_TYPE="${{ matrix.buildtype }}" -DUSE_LUAJIT="${{ matrix.luajit }}"'
+      - name: Build with meson
+        run: meson -D buildtype=${{ matrix.buildtype }} -D luajit=${{ matrix.buildtype }} ${{ runner.workspace }}/build && ninja -C ${{ runner.workspace }}/build
 
       - name: dir
         run: find $RUNNER_WORKSPACE
@@ -127,10 +118,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Get latest CMake
-        # Using 'latest' branch, the latest CMake is installed.
-        uses: lukka/get-cmake@latest
-
       - name: Windows - remove C:/mysql*
         run: rm -r -fo C:/mysql*
 
@@ -148,13 +135,8 @@ jobs:
           appendedCacheKey: ${{ matrix.name }}${{ matrix.buildtype }}${{ matrix.luajit }}
           vcpkgGitCommitId: 5568f110b509a9fd90711978a7cb76bae75bb092
 
-      - name: Build with CMake
-        uses: lukka/run-cmake@v3
-        with:
-          useVcpkgToolchainFile: true
-          buildDirectory: ${{ runner.workspace }}/build
-          cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
-          cmakeAppendedArgs: '-G Ninja -DCMAKE_BUILD_TYPE="${{ matrix.buildtype }}" -DUSE_LUAJIT="on"'
+      - name: Build with meson
+        run: meson -D buildtype=${{ matrix.buildtype }} ${{ runner.workspace }}/build && ninja -C ${{ runner.workspace }}/build
 
       - name: dir
         run: find $RUNNER_WORKSPACE
