--- a/config.lua.dist
+++ b/config.lua.dist
@@ -155,6 +155,8 @@ walkToSpawnRadius = 15
 
 -- Stamina
 staminaSystem = true
+timeToRegenMinuteStamina = 3 * 60
+timeToRegenPremiumStamina = 10 * 60
 
 -- Scripts
 warnUnsafeScripts = true
