--- a/config.lua.dist
+++ b/config.lua.dist
@@ -149,6 +149,8 @@ walkToSpawnRadius = 15
 
 -- Stamina
 staminaSystem = true
+timeToRegenMinuteStamina = 3 * 60
+timeToRegenMinutePremiumStamina = 10 * 60
 
 -- Scripts
 warnUnsafeScripts = true
