--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -65,9 +65,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
-
-      - name: Unshallow
-        run: git fetch --prune --unshallow
+          fetch-depth: 0
 
       - name: Get latest CMake
         # Using 'latest' branch, the latest CMake is installed.
@@ -148,9 +146,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
-
-      - name: Unshallow
-        run: git fetch --prune --unshallow
+          fetch-depth: 0
 
       - name: Get latest CMake
         # Using 'latest' branch, the latest CMake is installed.
