--- a/.github/workflows/release-vcpkg.yml
+++ b/.github/workflows/release-vcpkg.yml
@@ -38,9 +38,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
-
-      - name: Unshallow
-        run: git fetch --prune --unshallow
+          fetch-depth: 0
 
       - name: Get latest CMake
         # Using 'latest' branch, the latest CMake is installed.
@@ -129,9 +127,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
-
-      - name: Unshallow
-        run: git fetch --prune --unshallow
+          fetch-depth: 0
 
       - name: Get latest CMake
         # Using 'latest' branch, the latest CMake is installed.
