Update actions/checkout to v3 (#4225)
* Update actions/checkout to v3

* Restore unshallow behavior

--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -62,12 +62,9 @@ jobs:
             luajit: off
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
-          submodules: true
-
-      - name: Unshallow
-        run: git fetch --prune --unshallow
+          fetch-depth: 0
 
       - name: Get latest CMake
         # Using 'latest' branch, the latest CMake is installed.
@@ -145,12 +142,9 @@ jobs:
               lua luajit libmariadb pugixml cryptopp fmt
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
-          submodules: true
-
-      - name: Unshallow
-        run: git fetch --prune --unshallow
+          fetch-depth: 0
 
       - name: Get latest CMake
         # Using 'latest' branch, the latest CMake is installed.
@@ -206,4 +200,3 @@ jobs:
         with:
           name: tfs-${{ matrix.name }}-${{ matrix.buildtype }}-luajit=on-${{ github.sha }}
           path: ${{ github.workspace }}
-
