better corpse owner

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -96,6 +96,7 @@ premiumToSendPrivate = false
 forceMonsterTypesOnLoad = true
 cleanProtectionZones = false
 showPlayerLogInConsole = true
+corpseOwnerDuration = 10
 
 -- VIP and Depot limits
 -- NOTE: you can set custom limits per group in data/XML/groups.xml
