--- a/config.lua.dist
+++ b/config.lua.dist
@@ -80,6 +80,7 @@ mysqlSock = ""
 -- may cause high CPU usage with many players and potentially affect performance!
 -- NOTE: forceMonsterTypesOnLoad loads all monster types on startup to validate them.
 -- You can disable it to save some memory if you don't see any errors at startup.
+-- checkDuplicateStorageKeys checks the values stored in the variables for duplicates. If it finds equal values, the server is shut down to prevent bugs.
 allowChangeOutfit = true
 freePremium = false
 kickIdlePlayerAfterMinutes = 15
@@ -96,7 +97,7 @@ premiumToSendPrivate = false
 forceMonsterTypesOnLoad = true
 cleanProtectionZones = false
 showPlayerLogInConsole = true
-checkDuplicatesValues = false
+checkDuplicateStorageKeys = false
 
 -- VIP and Depot limits
 -- NOTE: you can set custom limits per group in data/XML/groups.xml
